It does not matter how slowly you go as long as you do not stop. -- Confucius

Thu, Feb 12, 2008
---------------------------------------------------------------------
- Installed [acts_as_commentable] plugin.
- More work designing simple and consistent landing pages.

Wed, Feb 11, 2008
---------------------------------------------------------------------
- Researching and mocking up landing pages for campaigns and leads.

Tue, Feb 10, 2008
---------------------------------------------------------------------
- Implemented creating and assigning tasks for the specific date from the calendar.

Mon, Feb 9, 2008
---------------------------------------------------------------------
- Converted remaining forms to HAML and the stylesheet to SASS.

Sun, Feb 8, 2008
---------------------------------------------------------------------
- Added custom logger to highlight logged messages.
- Added [task_at_hint] field to [tasks] table to capture due date request.
- Refactored task model and crm.date_select_popup() in application.js.

Sat, Feb 7, 2008
---------------------------------------------------------------------
- Created initial implementation of adding a new task (all except specific date).
- Refactored tasks code to simplify filtering.
- Implemented flipping between dropdown and calendar popup.
- Updated task related controller and view specs.

Fri, Feb 6, 2008
---------------------------------------------------------------------
- Finished implementing after_filter callback hook in [web-to-lead] plugin.
- Implemented tasks deletion for all three views.
- More fun with SASS stylesheets -- pretty cool stuff.

Thu, Feb 5, 2008
---------------------------------------------------------------------
- More work researching application's after_filter and making it work right.

Wed, Feb 4, 2008
---------------------------------------------------------------------
- Added [app_after_filter] hook and moved the rest of [web-to-lead] code to plugin.