@@ -1,5 +1,6 @@
-!color_title = #342d7e
+!color_title    = #342d7e
 !color_subtitle = darkslateblue
+!sidebar_width  = 210px
 
 // Common page elements.
 //------------------------------------------------------------------------------
@@ -70,7 +71,7 @@ div
     :font-size 14px
 
 .tabbed
-  :padding 12px 16px 12px 16px
+  :padding 12px 0px 12px 16px
 
 .main
   :background white
@@ -89,16 +90,16 @@ div
     :text-decoration none
 
 .sidebar
-  /:border 1px blue dotted
+  //:border 1px blue dotted
   :color #3f3f3f
   :font-size 11px
   :padding 0px 12px 0px 12px
-  :width 200px
+  :width = !sidebar_width
 
 .form
   :background white
-  /:margin 15px 15px 15px 15px
-  /:padding 0px 0px 10px 0px
+  //:margin 15px 15px 15px 15px
+  //:padding 0px 0px 10px 0px
 
   h4
     :font-size 18px
@@ -250,13 +251,37 @@ div
   .strip
     :margin 2px 5px 20px 0px
 
-// Filter and selectors.
+// Sidebar, filters, and selectors.
 //------------------------------------------------------------------------------
-.filters
+.filters, .panel
   :background snow
   :padding 6px 8px 6px 8px
   :-moz-border-radius 4px
   :-webkit-border-radius 4px
+
+.panel
+  li
+    :border-bottom 1px silver dotted
+    :font-size 12px
+    :list-style none
+    :padding 3px 0px 3px 0px
+    tt
+      :font-size 11px
+    dt
+      :float right
+      :font
+        :size 11px
+        :weight bold
+
+.caption
+  :background #D9D9F3
+  :border-bottom 1px silver solid
+  :color #344152
+  :font
+    :size 12px
+    :weight bold
+  :margin 0px 0px 5px 0px
+  :padding 2px 0px 2px 0px
 
 .selector
   :color black
