@@ -1,5 +1,9 @@
 It does not matter how slowly you go as long as you do not stop. -- Confucius
 
+Fri, Feb 13, 2008
+---------------------------------------------------------------------
+- Implemented Campaign Summary sidebar for the campaign landing page.
+
 Thu, Feb 12, 2008
 ---------------------------------------------------------------------
 - Installed [acts_as_commentable] plugin.
